; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/extr_clone.c_snd_clone_disable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/extr_clone.c_snd_clone_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_clone = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"NULL snd_clone\00", align 1
@SND_CLONE_ENABLE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_clone_disable(%struct.snd_clone* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.snd_clone*, align 8
  store %struct.snd_clone* %0, %struct.snd_clone** %3, align 8
  %4 = load %struct.snd_clone*, %struct.snd_clone** %3, align 8
  %5 = icmp ne %struct.snd_clone* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @SND_CLONE_ASSERT(i32 %6, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.snd_clone*, %struct.snd_clone** %3, align 8
  %9 = getelementptr inbounds %struct.snd_clone, %struct.snd_clone* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @SND_CLONE_ENABLE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %1
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  %17 = load i32, i32* @SND_CLONE_ENABLE, align 4
  %18 = xor i32 %17, -1
  %19 = load %struct.snd_clone*, %struct.snd_clone** %3, align 8
  %20 = getelementptr inbounds %struct.snd_clone, %struct.snd_clone* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, %18
  store i32 %22, i32* %20, align 4
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @SND_CLONE_ASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
